added kaggle repos

--- a/status_invest/finance.ipynb
+++ b/status_invest/finance.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,8 +317,279 @@
     "msft.news\n",
     "\n",
     "# get option chain for specific expiration\n",
-    "opt = msft.option_chain('YYYY-MM-DD')\n",
+    "opt = msft.option_chain('2024-01-19')\n",
     "# data available via: opt.calls, opt.puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asset = yf.Ticker(\"BHIA3.SA\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'address1': 'Av. Dra. Ruth Cardoso, 8501',\n",
+       " 'address2': '28th Floor Pinheiros',\n",
+       " 'city': 'São Paulo',\n",
+       " 'state': 'SP',\n",
+       " 'zip': '05425-070',\n",
+       " 'country': 'Brazil',\n",
+       " 'phone': '55 11 4225 6017',\n",
+       " 'website': 'https://www.grupocasasbahia.com.br',\n",
+       " 'industry': 'Specialty Retail',\n",
+       " 'industryKey': 'specialty-retail',\n",
+       " 'industryDisp': 'Specialty Retail',\n",
+       " 'sector': 'Consumer Cyclical',\n",
+       " 'sectorKey': 'consumer-cyclical',\n",
+       " 'sectorDisp': 'Consumer Cyclical',\n",
+       " 'longBusinessSummary': 'Grupo Casas Bahia S.A., together with its subsidiaries, engages in the retail of electronics, home appliances, and furniture in Brazil. It also offers financial services and solutions, such as buy now pay later, and credit card services; and logistics solutions and services comprising fulfillment and full commerce services. In addition, the company provides real estate properties administration, rent, lease, and intermediation services. It serves consumers through brick and-mortar stores and e-commerce platforms under the Casas Bahia, Ponto, Bartira, Extra.com, banQi, Rede Celer, ASAPLog, and CNT brands; and distribution centers and warehouses. The company was formerly known as Via S.A. and changed its name to Grupo Casas Bahia S.A. in September 2023. Grupo Casas Bahia S.A. was founded in 1946 and is headquartered in São Paulo, Brazil.',\n",
+       " 'fullTimeEmployees': 46073,\n",
+       " 'companyOfficers': [{'maxAge': 1,\n",
+       "   'name': 'Mr. Renato Horta Franklin',\n",
+       "   'title': 'CEO & Member of Executive Baord',\n",
+       "   'exercisedValue': 0,\n",
+       "   'unexercisedValue': 0},\n",
+       "  {'maxAge': 1,\n",
+       "   'name': 'Mr. Elcio Mitsuhiro Ito',\n",
+       "   'title': 'CFO & Member of Board of Executive Officers',\n",
+       "   'exercisedValue': 0,\n",
+       "   'unexercisedValue': 0},\n",
+       "  {'maxAge': 1,\n",
+       "   'name': 'Mr. Abel Ornelas Vieira',\n",
+       "   'title': 'COO, Executive VP & Member of Board of Executive Officers',\n",
+       "   'exercisedValue': 0,\n",
+       "   'unexercisedValue': 0},\n",
+       "  {'maxAge': 1,\n",
+       "   'name': 'Mr. Sérgio Augusto França Leme',\n",
+       "   'title': 'Member of Board of Executive Officer, Executive VP of People, ESG & Performance, Admin. VP and IRO',\n",
+       "   'exercisedValue': 0,\n",
+       "   'unexercisedValue': 0},\n",
+       "  {'maxAge': 1,\n",
+       "   'name': 'Mr. Edson  Tavares',\n",
+       "   'title': 'CIO, Supply Chain Officer & Member of Board of Executive Officer',\n",
+       "   'exercisedValue': 0,\n",
+       "   'unexercisedValue': 0},\n",
+       "  {'maxAge': 1,\n",
+       "   'name': 'Mr. Helio Muniz Garcia',\n",
+       "   'title': 'Chief Communications & ESG officer',\n",
+       "   'exercisedValue': 0,\n",
+       "   'unexercisedValue': 0}],\n",
+       " 'maxAge': 86400,\n",
+       " 'priceHint': 2,\n",
+       " 'previousClose': 10.11,\n",
+       " 'open': 10.08,\n",
+       " 'dayLow': 9.69,\n",
+       " 'dayHigh': 10.09,\n",
+       " 'regularMarketPreviousClose': 10.11,\n",
+       " 'regularMarketOpen': 10.08,\n",
+       " 'regularMarketDayLow': 9.69,\n",
+       " 'regularMarketDayHigh': 10.09,\n",
+       " 'exDividendDate': 1524787200,\n",
+       " 'beta': 1.746,\n",
+       " 'forwardPE': -2.3631961,\n",
+       " 'volume': 1607100,\n",
+       " 'regularMarketVolume': 1607100,\n",
+       " 'averageVolume': 3951980,\n",
+       " 'averageVolume10days': 3220520,\n",
+       " 'averageDailyVolume10Day': 3220520,\n",
+       " 'bid': 9.76,\n",
+       " 'ask': 9.77,\n",
+       " 'marketCap': 23114901504,\n",
+       " 'fiftyTwoWeekLow': 9.69,\n",
+       " 'fiftyTwoWeekHigh': 58.83866,\n",
+       " 'priceToSalesTrailing12Months': 0.7634223,\n",
+       " 'fiftyDayAverage': 12.3572,\n",
+       " 'twoHundredDayAverage': 30.985981,\n",
+       " 'currency': 'BRL',\n",
+       " 'enterpriseValue': 12979012608,\n",
+       " 'profitMargins': -0.05905,\n",
+       " 'floatShares': 87076511,\n",
+       " 'sharesOutstanding': 2368329984,\n",
+       " 'heldPercentInsiders': 0.05134,\n",
+       " 'heldPercentInstitutions': 0.35864,\n",
+       " 'impliedSharesOutstanding': 2368329984,\n",
+       " 'bookValue': 46.989,\n",
+       " 'priceToBook': 0.2077082,\n",
+       " 'lastFiscalYearEnd': 1672444800,\n",
+       " 'nextFiscalYearEnd': 1703980800,\n",
+       " 'mostRecentQuarter': 1696032000,\n",
+       " 'netIncomeToCommon': -1788000000,\n",
+       " 'trailingEps': -26.78,\n",
+       " 'forwardEps': -4.13,\n",
+       " 'pegRatio': -0.01,\n",
+       " 'lastSplitFactor': '1:25',\n",
+       " 'lastSplitDate': 1703721600,\n",
+       " 'enterpriseToRevenue': 0.429,\n",
+       " 'enterpriseToEbitda': 19.785,\n",
+       " '52WeekChange': -0.8187406,\n",
+       " 'SandP52WeekChange': 0.19866347,\n",
+       " 'lastDividendValue': 0.011935,\n",
+       " 'lastDividendDate': 1524787200,\n",
+       " 'exchange': 'SAO',\n",
+       " 'quoteType': 'EQUITY',\n",
+       " 'symbol': 'BHIA3.SA',\n",
+       " 'underlyingSymbol': 'BHIA3.SA',\n",
+       " 'shortName': 'CASAS BAHIA ON      NM',\n",
+       " 'longName': 'Grupo Casas Bahia S.A.',\n",
+       " 'firstTradeDateEpochUtc': 946900800,\n",
+       " 'timeZoneFullName': 'America/Sao_Paulo',\n",
+       " 'timeZoneShortName': 'BRT',\n",
+       " 'uuid': '4988837f-9972-394f-b3b2-1ad9e5ef3e45',\n",
+       " 'messageBoardId': 'finmb_880492',\n",
+       " 'gmtOffSetMilliseconds': -10800000,\n",
+       " 'currentPrice': 9.76,\n",
+       " 'targetHighPrice': 100.0,\n",
+       " 'targetLowPrice': 10.0,\n",
+       " 'targetMeanPrice': 41.88,\n",
+       " 'targetMedianPrice': 17.5,\n",
+       " 'recommendationMean': 3.3,\n",
+       " 'recommendationKey': 'hold',\n",
+       " 'numberOfAnalystOpinions': 9,\n",
+       " 'totalCash': 1642000000,\n",
+       " 'totalCashPerShare': 17.401,\n",
+       " 'ebitda': 656000000,\n",
+       " 'totalDebt': 13667000320,\n",
+       " 'quickRatio': 0.402,\n",
+       " 'currentRatio': 0.738,\n",
+       " 'totalRevenue': 30278000640,\n",
+       " 'debtToEquity': 308.232,\n",
+       " 'revenuePerShare': 467.351,\n",
+       " 'returnOnAssets': 0.00699,\n",
+       " 'returnOnEquity': -0.35979,\n",
+       " 'grossProfits': 9590000000,\n",
+       " 'freeCashflow': 2211000064,\n",
+       " 'operatingCashflow': 4617999872,\n",
+       " 'revenueGrowth': -0.029,\n",
+       " 'grossMargins': 0.28988,\n",
+       " 'ebitdaMargins': 0.02167,\n",
+       " 'operatingMargins': 0.0075499997,\n",
+       " 'financialCurrency': 'BRL',\n",
+       " 'trailingPegRatio': None}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get all stock info\n",
+    "asset.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-12-15 00:00:00-03:00</th>\n",
+       "      <td>11.94</td>\n",
+       "      <td>12.06</td>\n",
+       "      <td>11.17</td>\n",
+       "      <td>11.17</td>\n",
+       "      <td>19619700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-28 00:00:00-03:00</th>\n",
+       "      <td>11.55</td>\n",
+       "      <td>11.61</td>\n",
+       "      <td>11.25</td>\n",
+       "      <td>11.38</td>\n",
+       "      <td>3660200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Open   High    Low  Close    Volume  Dividends  \\\n",
+       "Date                                                                         \n",
+       "2023-12-15 00:00:00-03:00  11.94  12.06  11.17  11.17  19619700        0.0   \n",
+       "2023-12-28 00:00:00-03:00  11.55  11.61  11.25  11.38   3660200        0.0   \n",
+       "\n",
+       "                           Stock Splits  \n",
+       "Date                                     \n",
+       "2023-12-15 00:00:00-03:00          0.04  \n",
+       "2023-12-28 00:00:00-03:00          0.04  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get historical market data\n",
+    "# hist = asset.history(period=\"1mo\")\n",
+    "hist = asset.history(period=\"10y\")\n",
+    "hist[hist[\"Stock Splits\"] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# show meta information about the history (requires history() to be called first)\n",
+    "asset.history_metadata"
    ]
   }
  ],
