add more notebooks

--- a/food/read_text.ipynb
+++ b/food/read_text.ipynb
@@ -2,81 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import pytesseract"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"receipt_opencv/0a0ebd53.jpeg\")"
+    "import cv2\n",
+    "import pytesseract\n",
+    "\n",
+    "# sudo apt-get update\n",
+    "# sudo apt-get install libleptonica-dev tesseract-ocr tesseract-ocr-dev libtesseract-dev python3-pil tesseract-ocr-eng tesseract-ocr-script-latn\n",
+    "# sudo apt-get install tesseract-ocr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pdf2image import convert_from_path\n",
+    "import cv2\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# img = cv2.imread(\"receipt_opencv/0a0ebd53.jpeg\")\n",
+    "\n",
+    "\n",
+    "# pages = convert_from_path(\"receipts/2017/de/public transport/3ZCCCW.pdf\")\n",
+    "# img = np.array(pages[0])\n",
+    "\n",
+    "img = cv2.imread(\"pao_de_acucar_1.jpeg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   \n",
+      "antl Wee dy Pw ba\n",
+      "Osintr data hidy\n",
       "\n",
-      "Whurat\n",
-      "ie\n",
+      "tae Oh ae\n",
       "\n",
-      "UDAYA FILLING STATION\n",
+      "iu ie\n",
+      "WC AS oe\n",
+      "“0 Ta a\n",
+      "01 OereRalte Hts :\n",
+      "1 Shinto) mnt leat) a2\n",
+      "isin\n",
       "\n",
-      "MATTUPATTY ROAD\n",
-      "MUNNAR\n",
-      "04865230318\n",
+      "FANT Jane NLT Soh)\n",
       "\n",
-      "ORIGINAL\n",
-      "29-MAY -2019 14:02:23\n",
-      "INVOICE NO: 292 i\n",
-      "VEHICLE NO: NOT ENTERED (7)\n",
-      "NOZZLE NO : 1 i\n",
-      "PRODUCT: PETROL\n",
-      "RATE : 75.01 INR/Ltr\n",
-      "VOLUME: 1.33 Ltr\n",
-      "AMOUNT: 100.00 INR\n",
-      "S.T. No : 27430268741¢\n",
-      "M.S.T. No: 27430268741V\n",
+      "Vola tne\n",
       "\n",
-      "pe DE HE ETAL CT a DD OC DRE EC I DOC IE DCD\n",
+      "J His\n",
       "\n",
-      "Thank You! Visit Again\n",
+      "40 Goyal\n",
       "\n",
-      " \n",
+      "Mil ti\n",
       "\n",
-      "i\n",
-      "7\n",
-      "iH\n",
+      "430 ko 65.1\n",
+      "HOLCG'O PERM IORE\n",
+      "0,254 ky 88\n",
       "\n",
-      " \n",
+      "Si) tn\n",
+      "10. sew BUiL Pata\n",
+      "vs 00g\n",
+      "538 Cn UEIDE VA\n",
+      "SHHONEVE Mi\n",
       "\n",
-      "   \n",
-      "      \n",
-      "   \n",
-      " \n",
-      "      \n",
-      "   \n",
+      "000)\n",
+      "GAARA. NIUER Pil\n",
+      "\n",
+      "4660\n",
+      "65,0\n",
       "\n",
       " \n",
-      "\n",
-      "  \n",
-      "  \n",
-      "\n",
-      "       \n",
-      "   \n",
       "\f\n"
      ]
     }
