--- a/food/receipt-opencv.ipynb
+++ b/food/receipt-opencv.ipynb
@@ -1142,6 +1142,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pytesseract\n",
+      "  Downloading pytesseract-0.3.10-py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: packaging>=21.3 in /home/arthurpfonseca/Documents/Poli/5oQuadriAula/TCC/data-analysis/.venv/lib/python3.12/site-packages (from pytesseract) (23.2)\n",
+      "Requirement already satisfied: Pillow>=8.0.0 in /home/arthurpfonseca/Documents/Poli/5oQuadriAula/TCC/data-analysis/.venv/lib/python3.12/site-packages (from pytesseract) (10.1.0)\n",
+      "Installing collected packages: pytesseract\n",
+      "Successfully installed pytesseract-0.3.10\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {
     "execution": {
