weird initial result

--- a/MuffiChiuaua/analysis.ipynb
+++ b/MuffiChiuaua/analysis.ipynb
@@ -23,11 +23,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "2bJk8SikDx32",
-        "outputId": "0996f5dc-0fa7-497d-e3af-8a4c6ff0bca6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2bJk8SikDx32",
+        "outputId": "0996f5dc-0fa7-497d-e3af-8a4c6ff0bca6"
       },
       "execution_count": 2,
       "outputs": [
@@ -796,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -809,7 +809,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "  7/148 [>.............................] - ETA: 56s - loss: 33.3659 - accuracy: 0.4598"
+            "148/148 [==============================] - 92s 480ms/step - loss: 3.6313 - accuracy: 0.6668 - val_loss: 1.1072 - val_accuracy: 0.5875\n"
           ]
         }
       ],
@@ -850,47 +850,106 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "4T4wuXGf-x7s"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4T4wuXGf-x7s",
+        "outputId": "b395180e-3156-4a2b-8b7b-b77a88d0745a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"conv_layer\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " resize (Resizing)           (None, 500, 500, 3)       0         \n",
+            "                                                                 \n",
+            " rescale (Rescaling)         (None, 500, 500, 3)       0         \n",
+            "                                                                 \n",
+            " flip (RandomFlip)           (None, 500, 500, 3)       0         \n",
+            "                                                                 \n",
+            " zoom (RandomZoom)           (None, 500, 500, 3)       0         \n",
+            "                                                                 \n",
+            " rotate (RandomRotation)     (None, 500, 500, 3)       0         \n",
+            "                                                                 \n",
+            " conv_1 (Conv2D)             (None, 491, 491, 10)      3010      \n",
+            "                                                                 \n",
+            " conv_2 (Conv2D)             (None, 482, 482, 10)      10010     \n",
+            "                                                                 \n",
+            " pool (MaxPooling2D)         (None, 241, 241, 10)      0         \n",
+            "                                                                 \n",
+            " flatten_3 (Flatten)         (None, 580810)            0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 2)                 1161622   \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 1174642 (4.48 MB)\n",
+            "Trainable params: 1174642 (4.48 MB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ],
       "source": [
         "model_2.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "FQhuzM_0-x7s"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D9XhSKgp-x7t",
+        "outputId": "a81b230d-6250-4210-a14d-f159889980ed"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "37/37 [==============================] - 10s 249ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([1184, 2]),\n",
+              " <tf.Tensor: shape=(1184, 2), dtype=float32, numpy=\n",
+              " array([[0.47656265, 0.4654718 ],\n",
+              "        [0.99992335, 0.00916506],\n",
+              "        [0.41368327, 0.686596  ],\n",
+              "        ...,\n",
+              "        [0.02957662, 0.88185036],\n",
+              "        [0.33527926, 0.66880774],\n",
+              "        [0.01344389, 0.9765221 ]], dtype=float32)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ],
       "source": [
-        "model_2.save(\"params.keras\")"
+        "model_predictions = model_2.predict(test_data)\n",
+        "model_predictions = tf.squeeze(model_predictions)\n",
+        "model_predictions.shape, model_predictions"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [],
       "metadata": {
-        "id": "XXEInDtc-x7t"
+        "id": "QIKWQAX6IcLI"
       },
-      "outputs": [],
-      "source": [
-        "model_2.load_weights(\"params.keras\")"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "D9XhSKgp-x7t"
-      },
-      "outputs": [],
-      "source": [
-        "model_2.predict(test_data)"
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
