dump stock analysis

--- a/status_invest/test.ipynb
+++ b/status_invest/test.ipynb
@@ -16,9 +16,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from stock_data_fetcher import StockDataFetcher\n",
-    "from stock_data_analyser import StockDataAnalyser\n",
-    "from stock_data_plotter import StockDataPlotter"
+    "# https://bvmf.bmfbovespa.com.br/pt-br/mercados/acoes/empresas/ExecutaAcaoConsultaInfoEmp.asp?CodCVM=5410&ViewDoc=1&AnoDoc=2019&VersaoDoc=1&NumSeqDoc=84375\n",
+    "# https://bvmf.bmfbovespa.com.br/pt-br/mercados/acoes/empresas/ExecutaAcaoConsultaInfoEmp.asp?CodCVM=22470\n",
+    "# https://br.advfn.com/bolsa-de-valores/bovespa/weg-on-WEGE3/balanco\n",
+    "# https://bvmf.bmfbovespa.com.br/pt-br/mercados/acoes/empresas/ExecutaAcaoConsultaInfoEmp.asp?CodCVM=5410&ViewDoc=1&AnoDoc=2024\n",
+    "\n",
+    "from stock_fetcher import StockDataFetcher\n",
+    "from stock_analyser import PortfolioAnalyzer\n",
+    "from stock_plotter import StockDataPlotter"
    ]
   },
   {
@@ -302,7 +307,7 @@
     }
    ],
    "source": [
-    "analyser = StockDataAnalyser(stock_data)\n",
+    "analyser = PortfolioAnalyzer(stock_data)\n",
     "analyser.analyse()"
    ]
   },
